# G1-Software

./: .gitignore  README.md  Setup.sh
ros2_ws/src/hardware/hardware_bringup/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/hardware/hardware_bringup/config/: amcl_params.yaml  slam_toolbox_g1.yaml  teleop_joy_g1.yaml
ros2_ws/src/hardware/hardware_bringup/hardware_bringup/: g1_initializer.py
ros2_ws/src/hardware/hardware_bringup/launch/: g1_bringup.launch.py  g1_init.launch.py  g1_localization.launch.py  g1_mapping.launch.py  g1_nav.launch.py
ros2_ws/src/hardware/hardware_bringup/maps/: map1.pgm  map1.yaml  map2.pgm  map2.yaml  map5.pgm  map5.yaml  map_1.pgm  map_1.yaml  map_1761851145.pgm  map_1761851145.yaml  map_1762808489.pgm  map_1762808489.yaml
ros2_ws/src/hardware/hardware_bringup/scripts/: g1_initializer
ros2_ws/src/hardware/hardware_bringup/src/: start_sequence.cpp
ros2_ws/src/hardware/hardware_bringup/urdf/: g1_23dof.urdf
ros2_ws/src/hardware/twist_to_g1/: package.xml  setup.cfg  setup.py
ros2_ws/src/hardware/twist_to_g1/config/: bridge_params.yaml
ros2_ws/src/hardware/twist_to_g1/launch/: g1_cmdvel.launch.py
ros2_ws/src/hardware/twist_to_g1/twist_to_g1/: odom_to_tf.py  twist_to_g1.py
ros2_ws/src/hri/joystick_teleop/: package.xml  setup.py
ros2_ws/src/hri/joystick_teleop/joystick_teleop/: joystick_teleop.py
ros2_ws/src/pumas_nav2/augment_gridmap_online/: CMakeLists.txt  package.xml
ros2_ws/src/pumas_nav2/augment_gridmap_online/src/: augment_gridmap_online_node.cpp
ros2_ws/src/pumas_nav2/map_augmenter/: CMakeLists.txt  package.xml
ros2_ws/src/pumas_nav2/map_augmenter/src/: map_augmenter_node.cpp
ros2_ws/src/pumas_nav2/mvn_pln/: CMakeLists.txt  package.xml
ros2_ws/src/pumas_nav2/mvn_pln/src/: mvn_pln_node.cpp
ros2_ws/src/pumas_nav2/navigation_start/: CMakeLists.txt  package.xml
ros2_ws/src/pumas_nav2/navigation_start/launch/: .#pumas_nav2.launch.xml  navigation.launch.xml  navigation_namespace.launch.xml  pumas_nav2.launch.xml  slam_navigation.launch.xml
ros2_ws/src/pumas_nav2/navigation_start/maps/maps/: simul_simple_house.yaml
ros2_ws/src/pumas_nav2/navigation_start/rviz/: C2.rviz  config.rviz
ros2_ws/src/pumas_nav2/path_planner/: CMakeLists.txt  package.xml
ros2_ws/src/pumas_nav2/path_planner/src/: PathPlanner.cpp  PathPlanner.h  path_planner_node.cpp
ros2_ws/src/pumas_nav2/potential_fields/: CMakeLists.txt  package.xml
ros2_ws/src/pumas_nav2/potential_fields/potential_fields/: publish_enable.py
ros2_ws/src/pumas_nav2/potential_fields/src/: potential_fields_node.cpp
ros2_ws/src/pumas_nav2/simple_move/: CMakeLists.txt  package.xml
ros2_ws/src/pumas_nav2/simple_move/src/: simple_move_node.cpp
